' Generated by UML Generator
' Encoded: VLHDRzim3BtxL-ZeBacnimz3YtOR2dJ5C6-xgpAT4BQbG5BIVM3xxTEdJTN8Bedro4U-9zA-CPPhUvh6oWmeZrppYOcH6tDhhSRdauK7eMIBlu2zhGxO0HEenGXL5RBOH-2wFM1lsU-AiLslrUIXXg6q7h2gEBe_a1rq1RXpFvkvK5tKs39IOSjM_2lFpOpwAjVSH1O1A3F3VxABEwwZVd7I6gGjv87SeuJMSWiDUxySPkcENQD4YtmiTP5gH0cfvz6ouby3zexGzdF1XfqLTYc5a6gpKfPpPt_t6i-GBCAaB2hf2F5XjX6Jwg0y9GLzSzh6XFa8hyXvtZBJBFFtcJ-Ee16aWANpWbtkRWvA38zmXh5SYOLRlwQvtYNflwfpvchk7vJkFcleGSJztH0WNiJ1-Vi24zT3xLp7fmjMOp3QnEd8XItjf38a53h4yqfQQvN--HLCUh6wC9mcJJAiQXf3hk_Nujkn9diYbRszLoyoZEr9jVuUQDpm7jfBiOcFuoTqkpK0nPzndz0LfNTtr_AfI7y1FaJVJyg-3keG-Cv7x7YUMzxRjB7Nr--2HtASDuw2P1vqfZuKswzWmbYk-irkbs-u1Bs66_VzS1_AVm
' URL: http://www.plantuml.com/plantuml/uml/VLHDRzim3BtxL-ZeBacnimz3YtOR2dJ5C6-xgpAT4BQbG5BIVM3xxTEdJTN8Bedro4U-9zA-CPPhUvh6oWmeZrppYOcH6tDhhSRdauK7eMIBlu2zhGxO0HEenGXL5RBOH-2wFM1lsU-AiLslrUIXXg6q7h2gEBe_a1rq1RXpFvkvK5tKs39IOSjM_2lFpOpwAjVSH1O1A3F3VxABEwwZVd7I6gGjv87SeuJMSWiDUxySPkcENQD4YtmiTP5gH0cfvz6ouby3zexGzdF1XfqLTYc5a6gpKfPpPt_t6i-GBCAaB2hf2F5XjX6Jwg0y9GLzSzh6XFa8hyXvtZBJBFFtcJ-Ee16aWANpWbtkRWvA38zmXh5SYOLRlwQvtYNflwfpvchk7vJkFcleGSJztH0WNiJ1-Vi24zT3xLp7fmjMOp3QnEd8XItjf38a53h4yqfQQvN--HLCUh6wC9mcJJAiQXf3hk_Nujkn9diYbRszLoyoZEr9jVuUQDpm7jfBiOcFuoTqkpK0nPzndz0LfNTtr_AfI7y1FaJVJyg-3keG-Cv7x7YUMzxRjB7Nr--2HtASDuw2P1vqfZuKswzWmbYk-irkbs-u1Bs66_VzS1_AVm
' Generated on: 2026-02-12T18:56:37.708576700

@startuml name
skinparam classAttributeIconSize 0
hide circle

class GearShift {
  -fromGear: int
  -toGear: int
  -intendedGear: int
  --
  +GearShift(fromGear: int, toGear: int, intendedGear: int)
  +fromGear(): int
  +toGear(): int
  +intendedGear(): int
}

class Car {
  -currentGear: int
  -engineState: EngineState
  --
  +Car(initialGear: int)
  +currentGear(): int
  +engineState(): EngineState
  ~setCurrentGear(gear: int): void
  ~setEngineState(state: EngineState): void
}

class Driver {
  -emotion: Emotion
  --
  +Driver()
  +emotion(): Emotion
  +shift(car: Car, s: GearShift): Experience
}

class Experience {
  -emotion: Emotion
  -shockLevel: int
  --
  +Experience(emotion: Emotion, shockLevel: int)
  +emotion(): Emotion
  +shockLevel(): int
}

class FordPrefect {
  +FordPrefect()
  +hearRemark(r: Remark): Experience
}

class Remark {
  -impact: int
  --
  +Remark(impact: int)
  +impact(): int
}

class StoryTest {
  -driver: Driver
  -car: Car
  --
  ~setUp(): void
  ~notADownshiftNoShock(): void
  ~safeShiftNoShock(): void
  ~smallMistake(): void
  ~bigMistakeShock(): void
  ~fordSame(): void
  ~weakRemarkNotSame(): void
  ~remarkValidation(): void
}

Driver ..> Car
Driver ..> GearShift
Driver ..> Experience
FordPrefect ..> Remark
FordPrefect ..> Experience
StoryTest *-- Driver
StoryTest *-- Car
@enduml